examples/test/testpolicy16063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16063
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key23: value46
      key29: value29
      key18: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value3
          key42: value15
          key49: value27
      podSelector:
        matchLabels:
          key8: value3
